manifest/07_service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svc-test-prom
  name: svc-test-prom
spec:
  ports:
  - name: 80-9090
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: test-prom
