manifest/08_route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: svc-test-prom
spec:
  host: ""
  tls:
    termination: edge
  to:
    kind: Service
    name: svc-test-prom
    weight: null
status:
  ingress: null
